--- a/index.html
+++ b/index.html
@@ -192,6 +192,30 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-4 col-md-6 mb-4">
+                            <div class="card border-0 p-2">
+                                <img src="img/project/pizzahot.png" class="card-img-top" alt="news_1">
+                                <div class="card-body">
+                                    <div class="card-info pt-2 pb-4  border-bottom light-subtle">
+                                        <h4 class="card-title">Pizzahot</h4>
+                                        <p class="card-text">Built a online food website using HTML, CSS, JavaScript,
+                                            Bootstrap 5, jQuery & Gsap</p>
+                                    </div>
+                                    <div class="btn-comment d-flex justify-content-between mt-3 align-items-center">
+                                        <a href="https://sk-mousin-ali.github.io/Pizzahot/" target="_blank"
+                                            class=" custom-btn-2 ">View<i class="ri-eye-fill ps-2"></i></a>
+                                        <span class="d-flex align-items-center fs-5"> Like <div class="con-like">
+                                                <input class="like" type="checkbox" title="like">
+                                                <div class="checkmark">
+                                                    <i class="ri-heart-line outline"></i>
+                                                    <i class="ri-heart-fill filled"></i>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
                         <div class="card border-0 p-2">
                             <img src="img/project/medicare.png" class="card-img-top" alt="news_1">
                             <div class="card-body">
